<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.MainActivity">

    <View
        android:id="@+id/top_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/foreground_color"
        app:layout_constraintBottom_toTopOf="@+id/inputHorizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/inputHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/foreground_color"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/menuButton">

        <EditText
            android:id="@+id/input"
            style="@style/RobotoFontCondensedMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:autofillHints="false"
            android:background="?attr/foreground_color"
            android:inputType="textNoSuggestions"
            android:maxLength="10000"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="?attr/text_color"
            android:textSize="55sp"
            tools:ignore="RtlCompat" />

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/resultDisplayHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/foreground_color"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultDisplay"
                style="@style/RobotoFontCondensedMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/foreground_color"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="?attr/text_second_color"
                android:textIsSelectable="true"
                android:textSize="35sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultDisplayHorizontalScrollView"
        app:umanoPanelHeight="41dp"
        app:umanoScrollableView="@id/history_recylcle_view"
        app:umanoShadowHeight="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.MainActivity">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- All other TableRows remain unchanged -->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <!-- Backspace moved to first position -->
                    <ImageButton
                        android:id="@+id/backspaceButton"
                        style="@style/CalculatorButton"
                        android:contentDescription="@string/backspaceDesc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="backspaceButton"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/backspace" />

                    <!-- Zero moved to second position -->
                    <Button
                        android:id="@+id/zeroButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/zero"
                        android:textSize="28sp" />

                    <!-- Decimal moved to third position -->
                    <ImageButton
                        android:id="@+id/pointButton"
                        style="@style/CalculatorButton"
                        android:contentDescription="@string/pointDesc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="pointButton" />

                    <!-- Equals stays last -->
                    <Button
                        android:id="@+id/equalsButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_equals_color"
                        android:onClick="equalsButton"
                        android:text="@string/equals"
                        android:textSize="32sp" />
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/display_background"
            tools:context=".activities.MainActivity">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recylcle_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:background="?attr/history_background_color"
                app:layout_constraintBottom_toTopOf="@+id/sliding_layout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_history_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/no_history_available"
                android:textSize="18sp"
                android:textColor="?attr/text_color"
                android:visibility="gone"
                android:gravity="center"
                android:layout_marginBottom="32dp"
                android:background="?attr/history_background_color"
                app:layout_constraintBottom_toTopOf="@+id/sliding_layout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/history_sliding_layout_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_recylcle_view"/>

            <View
                android:id="@+id/sliding_layout_button"
                android:layout_width="30dp"
                android:layout_height="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="15dp"
                android:background="?attr/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <ImageButton
        android:id="@+id/menuButton"
        style="@style/RobotoFontCondensedLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/ic_baseline_more_vert_24"
        android:onClick="openAppMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <TextView
        android:id="@+id/degreeTextView"
        style="@style/RobotoFontCondensedMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="?attr/text_third_color"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
